--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,9 +1,9 @@
-name: 自动获取 Antigravity 版本
+name: 自动监控更新
 
 on:
   schedule:
-    - cron: '0 * * * *' # 每 1 小时运行一次
-  workflow_dispatch: # 支持手动触发
+    - cron: '0 * * * *' # 每小时执行
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -34,92 +34,24 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-        item: ${{ fromJson(needs.sync_and_release.outputs.history) }}
-    steps:
-      - name: 检出代码
-        uses: actions/checkout@v4
+          git add README.md history.json VERSION
+          # 如果没有更改 commit 会失败，所以加个判断或者允许空
+          git commit -m "Auto Update to ${{ steps.check.outputs.version }}" || echo "No changes to commit"
+          git push
 
-      - name: 设置 Python 环境
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
-      - name: 安装依赖
-        run: pip install requests
-
-      - name: 下载历史版本安装包
-        run: python check_version.py --download ${{ matrix.item.version }} ${{ matrix.item.full_version }}
-
-      - name: 创建历史 Release
+      - name: 发布 Release
+        if: steps.check.outputs.version_changed == 'true'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ matrix.item.version }}
-          name: Antigravity ${{ matrix.item.version }}
-          files: |
-            Antigravity-*
-          overwrite: true
+          tag_name: ${{ steps.check.outputs.version }}
+          name: Antigravity Manager ${{ steps.check.outputs.version }}
           body: |
-            检测到 Antigravity 历史版本补全。
+            自动同步自 [lbjlaq/Antigravity-Manager](https://github.com/lbjlaq/Antigravity-Manager)
             
-            > [!IMPORTANT]
-            > **本 Release 已自动备份历史版本安装包附件。**
+            原始更新日志:
             
-            版本号: `${{ matrix.item.version }}`
-            下载页面: https://antigravity.google/download
-            
-            Windows (x64): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ matrix.item.full_version }}/windows-x64/Antigravity.exe)
-            Windows (ARM64): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ matrix.item.full_version }}/windows-arm64/Antigravity.exe)
-            MacOS (Apple Silicon): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ matrix.item.full_version }}/darwin-arm/Antigravity.dmg)
-            MacOS (Intel): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ matrix.item.full_version }}/darwin-x64/Antigravity.dmg)
-            Linux: [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ matrix.item.full_version }}/linux-x64/Antigravity.tar.gz) | [官网下载](https://antigravity.google/download/linux)
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  latest_release:
-    name: 发布最新版本
-    needs: [sync_and_release, init_history]
-    if: |
-      always() && 
-      needs.sync_and_release.result == 'success' && 
-      needs.sync_and_release.outputs.need_release == 'true' &&
-      (needs.init_history.result == 'success' || needs.init_history.result == 'skipped')
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - name: 下载安装包 Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: installer-assets
-
-      - name: 创建最新 Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ needs.sync_and_release.outputs.version }}
-          name: Antigravity ${{ needs.sync_and_release.outputs.version }}
+            ${{ steps.check.outputs.body }}
           files: |
-            Antigravity-*
-          make_latest: true
-          overwrite: true
-          fail_on_unmatched_files: true
-          body: |
-            检测到 Antigravity 发布了新版本！
-            
-            > [!IMPORTANT]
-            > **本 Release 已自动备份安装包附件。即使官网链接失效，您依然可以从下方的 Assets 区域下载。**
-            
-            版本号: `${{ needs.sync_and_release.outputs.version }}`
-            下载页面: https://antigravity.google/download
-            
-            ### 官方下载链接 (可能失效):
-            Windows (x64): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ needs.sync_and_release.outputs.full_version }}/windows-x64/Antigravity.exe)
-            Windows (ARM64): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ needs.sync_and_release.outputs.full_version }}/windows-arm64/Antigravity.exe)
-            MacOS (Apple Silicon): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ needs.sync_and_release.outputs.full_version }}/darwin-arm/Antigravity.dmg)
-            MacOS (Intel): [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ needs.sync_and_release.outputs.full_version }}/darwin-x64/Antigravity.dmg)
-            Linux: [下载](https://edgedl.me.gvt1.com/edgedl/release2/j0qc3/antigravity/stable/${{ needs.sync_and_release.outputs.full_version }}/linux-x64/Antigravity.tar.gz) | [官网下载](https://antigravity.google/download/linux)
-          draft: false
-          prerelease: false
+            ${{ steps.check.outputs.assets }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
